mejora de pagina

--- a/src/main/resources/static/video.html
+++ b/src/main/resources/static/video.html
@@ -3,7 +3,7 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
-<html>
+<html lang="es">
     <head>
         <title>TODO supply a title</title>
         <link rel="stylesheet" type="text/css" href="estilo.css">
@@ -11,10 +11,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Pagina principal</h1>
+        <h1>Video de muestra</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Pagina principal</a></li> 
+               <li><a href="index.html">Pagina principal</a></li> 
                 <li><a href="video.html">Video de muestra</a></li> 
                 <li><a href="">Menu</a></li> 
                 <li><a href="">Menu</a></li> 
@@ -25,22 +25,24 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <div class="secciones">
                     <div>
                         <h2>Informacion del sitio </h2>
-                        <p> "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                            totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                       <iframe width="853" 
+                               height="480" 
+                               src="https://www.youtube.com/embed/28JKwGTiyMI" 
+                               title="La importancia de la programación" 
+                               frameborder="0" 
+                               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                               allowfullscreen></iframe>
                     </div>
-                    <div><img src="img/Altas_montañas.jpg" alt=""/> </div>
             </div>
                 <div class="secciones">
                     <div>
-                        <h2>Informacion del sitio </h2>
+                        <h2>Informacion del video </h2>
                         <p> "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                             totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
                             Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
                             sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
                     </div>
-                    <div><img src="img/Altas_montañas.jpg" alt=""/> </div>
+                    <img src="img/doom.jpg" alt=""/>
             </div>
         </div>
             <div class="Menu-secundario">
